# UV Navigator - Auswertungsvisualisierung fuer Universum V
# Copyright (C) 2004 Daniel Roethlisberger <roe@chronator.ch>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, see http://www.gnu.org/copyleft/
#
# $Id$

nobase_dist_pkgdata_DATA = \
	fonts/FreeSans.ttf \
	images/planet00.jpg \
	images/planet01.jpg \
	images/planet02.jpg \
	images/planet03.jpg \
	images/planet04.jpg \
	images/planet05.jpg \
	images/planet06.jpg \
	images/planet07.jpg \
	images/planet08.jpg \
	images/planet09.jpg \
	images/planet10.jpg \
	images/universum.png \
	images/sdl_powered.png

MAINTAINERCLEANFILES = Makefile.in

