# UV Navigator - Auswertungsvisualisierung fuer Universum V
# Copyright (C) 2004 Daniel Roethlisberger <roe@chronator.ch>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, see http://www.gnu.org/copyleft/
#
# $Id$

nobase_dist_pkgdata_DATA = \
	fonts/FreeSans.ttf \
	images/planet01.png \
	images/planet02.png \
	images/planet03.png \
	images/planet04.png \
	images/planet05.png \
	images/planet06.png \
	images/planet07.png \
	images/planet08.png \
	images/planet09.png \
	images/planet10.png \
	images/universum.png \
	images/sdl_powered.png

MAINTAINERCLEANFILES = Makefile.in

